k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wavecast-ai-service
spec:
  type: NodePort
  selector:
    app: wavecast-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
